Added optional 'sort' query param to '/services' endpoint.
Description:
- The query param  'sort' takes only the value 'name'. The services are sorted by name (in ascending order).
- flasgger services_get.yml file updated.
